--- a/public/de/index.html
+++ b/public/de/index.html
@@ -21,7 +21,7 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>Mein Tagebuch / My Journal | Mein Tagebuch / My Journal</title>
+  <title> | Mein Tagebuch / My Journal</title>
 </head>
 
 <body>
@@ -52,9 +52,26 @@
 
   <section class="main-content">
     
-  <h1>Mein Tagebuch / My Journal</h1>
-<ul>
+  <h1></h1>
+  
 
+<h1 id="mein-tagebuch-für-amazon-alexa"><strong>Mein Tagebuch</strong> für Amazon Alexa</h1>
+
+<h2 id="einführung">Einführung</h2>
+
+<!-- [link](#datenschutzerklärung) -->
+
+<p><strong>Mein Tagebuch</strong> ermöglicht es, Tagebucheinträge mithilfe von Amazon Alexa zu verfassen. Einträge können dabei für den aktuellen Tag oder für vergangene Tage verfasst werden. Außerdem kann in vergangenen Einträgen gesucht werden. Alles was benötigt wird, ist ein Gerät mit Alexa, wie z.B. ein Amazon Echo und ein Google Account. Das Tagebuch wird als Tabelle mit dem namen <code>Tagebuch</code> in Google Drive gespeichert und kann jederzeit von Hand editiert werden.</p>
+
+<h2 id="datenschutzerklärung">Datenschutzerklärung</h2>
+
+<!-- [link](#der-mein-tagebuch-skill-für-alexa) -->
+
+<p>Der <strong>Mein Tagebuch</strong> Alexa Skill</p>
+
+<ul>
+<li>verarbeitet Google Account User Token, die vom Alexa Service als Teil des Requests mitgegeben werden. Dieses Token wird ausschließlich verwendet um Zugang zur <code>Tagebuch</code>-Datei in Google Drive zu bekommen. Die Tokens werden nicht anderweitig gespeichert oder verwendent.</li>
+<li>speichert Tagebuch-Einträge von Benutzern ausschließlich in dem verknüpften Google Konto unter der Datei <code>Tagebuch</code> in Drive.</li>
 </ul>
 
 
