--- a/public/en/index.html
+++ b/public/en/index.html
@@ -21,7 +21,7 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>Mein Tagebuch / My Journal | Mein Tagebuch / My Journal</title>
+  <title> | Mein Tagebuch / My Journal</title>
 </head>
 
 <body>
@@ -52,10 +52,12 @@
 
   <section class="main-content">
     
-  <h1>Mein Tagebuch / My Journal</h1>
-<ul>
+  <h1></h1>
+  
 
-</ul>
+<h1 id="my-journal-for-amazon-alexa"><strong>My Journal</strong> for Amazon Alexa</h1>
+
+<p><em>Coming soon in English.</em></p>
 
 
     <footer class="site-footer">
