--- a/public/weg/index.html
+++ b/public/weg/index.html
@@ -21,7 +21,7 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>Mein Tagebuch / My Journal | Mein Tagebuch / My Journal</title>
+  <title> | Mein Tagebuch / My Journal</title>
 </head>
 
 <body>
@@ -52,10 +52,15 @@
 
   <section class="main-content">
     
-  <h1>Mein Tagebuch / My Journal</h1>
-<ul>
+  <h1></h1>
+  
 
-</ul>
+<h1 id="mein-tagebuch-für-amazon-alexa"><strong>Mein Tagebuch</strong> für Amazon Alexa</h1>
+
+<p>Choose your language:</p>
+
+<p><a href="de/" title="Deutsch"><img src="de.png" alt="Deutsch" /></a>
+<a href="en/" title="English"><img src="en.png" alt="English" /></a></p>
 
 
     <footer class="site-footer">
