--- a/public/en/index.html
+++ b/public/en/index.html
@@ -57,7 +57,7 @@
 
 <h1 id="my-journal-for-amazon-alexa"><strong>My Journal</strong> for Amazon Alexa</h1>
 
-<p><em>Coming soon in English.</em></p>
+<p><em>Coming soon in English. Skill itself and privacy is only available in German for now</em></p>
 
 
     <footer class="site-footer">
