--- a/public/de/index.html
+++ b/public/de/index.html
@@ -67,12 +67,19 @@
 
 <!-- [link](#der-mein-tagebuch-skill-für-alexa) -->
 
-<p>Der <strong>Mein Tagebuch</strong> Alexa Skill</p>
+<p>Der <strong>Mein Tagebuch</strong> Alexa Skill verarbeitet Google Account User Token, die vom Alexa Service als Teil des Requests mitgegeben werden. Dieses Token wird ausschließlich zur Erzeugung und zur Bearbeitung der <code>Tagebuch</code>-Tabelle in Google Drive verwendet. Die Tokens werden nicht anderweitig gespeichert oder verwendet und werden nach einem Request wieder verworfen.</p>
 
-<ul>
-<li>verarbeitet Google Account User Token, die vom Alexa Service als Teil des Requests mitgegeben werden. Dieses Token wird ausschließlich verwendet um Zugang zur <code>Tagebuch</code>-Datei in Google Drive zu bekommen. Die Tokens werden nicht anderweitig gespeichert oder verwendent.</li>
-<li>speichert Tagebuch-Einträge von Benutzern ausschließlich in dem verknüpften Google Konto unter der Datei <code>Tagebuch</code> in Drive.</li>
-</ul>
+<p>Tagebucheinträge werden von Nutzern selbst über die Spracheingabe von Alexa eingegeben. Einträge werden anschließend an Amazons Alexa Service geschickt und von dort weitergegeben an den Tagebuch Skill, der in der IBM Cloud gehostet ist. Von dort werden sie an Googles Spreadhseet API geschickt und in der <code>Tagebuch</code>-Tabelle in Google Drive in schriftform gespeichert. Eine <code>Tagebuch</code>-Tabelle verwendet pro Eintrag eine Zeile in der das Datum und der Text des Eintrags gespeichert wird, sowie der aktuelle Zeitstempel.</p>
+
+<p>Tagebucheinträge eines Nutzers können auch wieder abgerufen werden. Nachdem ein Nutzer identifiziert hat, welche Einträge abgerufen werden sollen, werden Tagebucheinträge  vom <strong>Mein Tagebuch</strong> Alexa Skill aus der <code>Tagebuch</code>-Tabelle in Google Drive abgerufen und weitergegeben an Amazons Alexa Service, der sie wiederum an das Alexa-Gerät des Nutzers weitergibt, wo sie von Alexa wiedergegeben werden.</p>
+
+<p>Der <strong>Mein Tagebuch</strong> Alexa Skill speichert Tagebuch-Einträge von Benutzern ausschließlich in dem verknüpften Google Konto unter der Datei <code>Tagebuch</code> in Google Drive. Eine weitere Speicherung findet nicht statt. Für mehr Informationen wie Amazon Alexa diese Daten verarbeitet, finden Sie <a href="https://www.amazon.de/gp/help/customer/display.html?nodeId=GA7E98TJFEJLYSFR">hier</a>.</p>
+
+<p>Tagebucheinträge eines Nutzers werden niemals geteilt mit anderen Nutzern, oder sonst irgendwie verfügbar für Dritte gemacht. Selbstverständlich kann ein Nutzer sich entscheiden, die Funktionen von Google Drive zu verwenden um eine <code>Tagebuch</code>-Tabelle mit anderen Google Drive Nutzern zu teilen oder sie öffentlich zu machen.</p>
+
+<p>Eine <code>Tagebuch</code>-Tabelle kann zu jedem beliebigen Zeitpunkt vom Nutzer editiert oder gelöscht werden.</p>
+
+<p>Eine andere Nutzung der Google-Nutzerdaten als die oben angegebene findet ausdrücklich nicht statt.</p>
 
 
     <footer class="site-footer">
